--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 Ingresos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#" onclick="visible(ingresos),oculto(gastos,colchon)">Actualizar</a></li>
-                <li><a class="dropdown-item" href="#" onclick="">Consultar</a></li>
+                <li><a class="dropdown-item" href="#" onclick="visible(ingresos)">Actualizar</a></li>
+                <li><a class="dropdown-item" href="#" onclick="visible(consultaIng)">Consultar</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -49,8 +49,8 @@
                 Gastos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#"onclick="visible(gastos),oculto(ingresos,colchon)">Actualizar</a></li>
-                <li><a class="dropdown-item" href="#">Consultar</a></li>
+                <li><a class="dropdown-item" href="#"onclick="visible(gastos)">Actualizar</a></li>
+                <li><a class="dropdown-item" href="#" onclick="visible(consultaGast)">Consultar</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -58,8 +58,8 @@
                 Colchon
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#" onclick="visible(colchon),oculto(gastos,ingresos)">Actualizar</a></li>
-                <li><a class="dropdown-item" href="#">Consultar</a></li>
+                <li><a class="dropdown-item" href="#" onclick="visible(colchon)">Actualizar</a></li>
+                <li><a class="dropdown-item" href="#" onclick="visible(consultaCol)">Consultar</a></li>
               </ul>
             </li>
           </ul>
@@ -100,9 +100,24 @@
 
       <div id="colchon">
         <div>Actualizar colchon: $ <input type="number" id="actgastos"></div>
-        <div>Fecha: <input type="date" id="fechagastos"></div>
+        <div>Fecha: <input type="date" id="fechacolchon"></div>
         <button onclick="oculto(colchon)">Actualizar</button>
       </div>
+
+      <div id="consultaIng">
+        <div>Fecha: <input type="date" id="consultaIng"></div>
+        <button>Consultar</button>
+      </div>
+      <div id="consultaGast">   
+        <div>Fecha: <input type="date" id="consultaGast"></div>
+        <button>Consultar</button>
+      </div>
+
+      <div id="consultaCol"> 
+        <div>Fecha: <input type="date" id="consultaCol"></div>
+        <button>Consultar</button>
+      </div>
+      
     </section>
    
   </header>
