--- a/index.html
+++ b/index.html
@@ -105,16 +105,61 @@
       </div>
 
       <div id="consultaIng">
-        <div>Fecha: <input type="date" id="consultaIng"></div>
+        <label for="MesIngresos">Mes: </label>
+        <select name="MesIngresos" id="MesIngresos"> 
+          <option value="1">Enero</option>
+          <option value="2">Febrero</option>
+          <option value="3">Marzo</option>
+          <option value="4">Abril</option>
+          <option value="5">Mayo</option>
+          <option value="6">Junio</option>
+          <option value="7">Julio</option>
+          <option value="8">Agosto</option>
+          <option value="9">Septiembre</option>
+          <option value="10">Octubre</option>
+          <option value="11">Noviembre</option>
+          <option value="12">Diciembre</option>
+        </select>
+         <div>Año: <input type="year" value="2024" min="2020" max="2024" id="consulFechaIng"></div>
         <button>Consultar</button>
       </div>
       <div id="consultaGast">   
-        <div>Fecha: <input type="date" id="consultaGast"></div>
+        <label for="MesGastos">Mes: </label>
+        <select name="MesGastos" id="MesGastos"> 
+          <option value="1">Enero</option>
+          <option value="2">Febrero</option>
+          <option value="3">Marzo</option>
+          <option value="4">Abril</option>
+          <option value="5">Mayo</option>
+          <option value="6">Junio</option>
+          <option value="7">Julio</option>
+          <option value="8">Agosto</option>
+          <option value="9">Septiembre</option>
+          <option value="10">Octubre</option>
+          <option value="11">Noviembre</option>
+          <option value="12">Diciembre</option>
+        </select>
+         <div>Año: <input type="year" value="2024" min="2020" max="2024" id="consulFechaGast"></div>
         <button>Consultar</button>
       </div>
 
-      <div id="consultaCol"> 
-        <div>Fecha: <input type="date" id="consultaCol"></div>
+      <div id="consultaCol">
+        <label for="MesColchon">Mes: </label>
+        <select name="MesColchon" id="MesColchon"> 
+          <option value="1">Enero</option>
+          <option value="2">Febrero</option>
+          <option value="3">Marzo</option>
+          <option value="4">Abril</option>
+          <option value="5">Mayo</option>
+          <option value="6">Junio</option>
+          <option value="7">Julio</option>
+          <option value="8">Agosto</option>
+          <option value="9">Septiembre</option>
+          <option value="10">Octubre</option>
+          <option value="11">Noviembre</option>
+          <option value="12">Diciembre</option>
+        </select>
+         <div>Año: <input type="year" value="2024" min="2020" max="2024" id="consulFechaCol"></div>
         <button>Consultar</button>
       </div>
       
